# Persistency

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  demo_naming.sh  persistency.bb
doc/: AUTOSAR_COMPLIANCE_ANALYSIS.md  DESIGN_ANALYSIS.md  PHASE1_COMPLETION_SUMMARY.md  README.md  SOLUTION_B_IMPLEMENTATION_REPORT.md  kvs.proto
doc/architecture/: ARCHITECTURE_REFACTORING_PLAN.md  KVS_STORAGE_STRUCTURE_ANALYSIS.md  KVS_SUPPORTED_TYPES.md  OTA_UPDATE_ARCHITECTURE.md
doc/archived/: IMPROVEMENTS_SUMMARY.md  PERSISTENCY_MODULE_SUMMARY_CN.md  REFACTORING_SUMMARY.md
doc/compliance/: AUTOSAR_COMPLIANCE_CHECKLIST.md
doc/configuration/: CONFIGURABLE_MEMORY_SUMMARY.md  CONFIGURATION_GUIDE.md  CONFIG_INTEGRATION.md  MEMORY_CONFIG_QUICK_REFERENCE.md
doc/refactoring/: KVS_BACKEND_TYPE_OPTIMIZATION.md  REFACTORING_CONSTRAINTS_CHECKLIST.md  SQLITE_BACKEND_REFACTORING_SUMMARY.md  SQLITE_BACKEND_SUMMARY.md  SQLITE_OPTIMIZATION_SUMMARY.md  TYPE_SYSTEM_OPTIMIZATION.md
doc/testing/: TASK4_INTEGRITY_VALIDATION_SUMMARY.md  TEST_SUMMARY.md  UT_AND_EXAMPLE_SUMMARY.md  VERIFICATION_REPORT.md
source/client/: CPropertyClient.cpp  CPropertyClient.hpp  property_main.cpp
source/daemon/: CDaemonManager.cpp  CPersistencyDaemon.hpp
source/inc/: CDataType.hpp  CFileStorage.hpp  CFileStorageBackend.hpp  CKeyValueStorage.hpp  CKvsBackend.hpp  CKvsFileBackend.hpp  CKvsPropertyBackend.hpp  CKvsSqliteBackend.hpp  CPerErrorDomain.hpp  CPersistency.hpp  CPersistencyManager.hpp  CReadAccessor.hpp  CReadWriteAccessor.hpp  CReplicaManager.hpp  CStoragePathManager.hpp  CUpdate.hpp  IKvsBackend.hpp
source/src/: CDataType.cpp  CFileStorage.cpp  CFileStorageBackend.cpp  CKeyValueStorage.cpp  CKvsBackend.cpp  CKvsFileBackend.cpp  CKvsPropertyBackend.cpp  CKvsSqliteBackend.cpp  CPersistencyManager.cpp  CReadAccessor.cpp  CReadWriteAccessor.cpp  CReplicaManager.cpp  CStoragePathManager.cpp  CUpdate.cpp  IKvsBackend.cpp
test/: config_management_demo.sh
test/benchmark/: Benchmark.cpp  performance_benchmark.cpp
test/examples/: backend_comparison_example.cpp  config_driven_property_backend_example.cpp  config_integration_example.cpp  multi_backend_usage_example.cpp  persistency_config.json  persistency_full_config.json  property_backend_config_example.cpp  property_backend_demo.cpp  property_memory_only_example.cpp  sqlite_backend_demo.cpp  test_kvs_none.cpp  test_sqlite_basic.cpp
test/unittest/: TestFS.hpp  TestKVS.hpp  test_core_constraints.cpp  test_data_type.cpp  test_error_domain.cpp  test_file_storage.cpp  test_file_storage_backend.cpp  test_key_value_storage.cpp  test_kvs_property_backend.cpp  test_kvs_sqlite_backend_enhanced.cpp  test_main.cpp  test_property_backend.cpp  test_replica_manager.cpp  test_storage_path_manager.cpp
tools/: verify_autosar_compliance.sh
